--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "tailwind-breakpoint-debugger",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "A lightweight React component to help developers visualize and debug Tailwind CSS breakpoints during development.",
   "license": "MIT",
   "author": "Marko Sudar (@sukibk)",
   "repository": {
     "type": "git",
-    "url":  "https://github.com/sukibk/tailwind-breakpoint-debugger"},
+    "url": "https://github.com/sukibk/tailwind-breakpoint-debugger"
+  },
   "type": "commonjs",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
