(fix): Keywords added in README.md and package.json

--- a/package.json
+++ b/package.json
@@ -37,5 +37,12 @@
   },
   "dependencies": {
     "rollup": "^4.37.0"
-  }
+  },
+  "keywords": [
+    "tailwind",
+    "next.js",
+    "react",
+    "breakpoint",
+    "debugger"
+  ]
 }
